--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ nick.addEventListener('click', function (event) {
   nick.blur();
   render();
 });
-getElementById("vp").innerHTML = window.innerWidth;
+document.getElementById("vp").innerHTML = window.innerWidth;
 /*
   https://stackoverflow.com/questions/114543/how-can-i-horizontally-center-an-element
   https://codepen.io/alexandredees/pen/DbXggK
