--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="favicon-512.png">
   <title>Silver Barter</title>
   <style>
+    #vp {display:block; font-size: 10px; color: #ccc;}
     #container {display: block; max-width: 480px;}
     body {font-size: 24px; font-family: Helvetica;}
     .warn {background-color: #e9dbf5;} /* #efe4f7; #E6E6FA;}*/
@@ -98,7 +99,7 @@
     <br>&nbsp;
 </td></tr>
 </table></div>
-<div id="vp" style="display=block"></div>
+<div id="vp"></div>
 <script>
 let spot, amt, troy = .715, db = {
     "dolr": {"fract": 1/troy, "count": 0, "price": 0, "total": 0},
