--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="favicon-512.png">
   <title>Silver Barter</title>
   <style>
-    #vp {display:block; font-size: 10px; color: #ccc;}
+    #vp {display:block; font-size: 12px; color: gray;}
     #container {display: block; max-width: 480px;}
     body {font-size: 24px; font-family: Helvetica;}
     .warn {background-color: #e9dbf5;} /* #efe4f7; #E6E6FA;}*/
