--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     #lst {display:block; width:435px;}
     #tbl {margin: auto;}
     #tbl td {text-align: right;}
+    #tbl tr {background-color: transparent;}
   /*#tbl td:nth-child(3) {text-align: left;}*/
 
     @media only screen and (max-width: 500px) {
