--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ img {width:75%; margin: 10%}
 <div id="lst"></div>
 <div id="vp"></div>
 <div id="id01" class="modal">
-  <img src="Silver Barter QR.png">
+  <img src="Silver Barter QR2.png">
 </div>
 <script>
 let spot, amt, troy = .715, db = {
