--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   background-size: 90%;
   background-repeat: no-repeat; */
 }
-img {width:75%; margin: 10%}
+img {width:80%; margin: 10% 10%;}
     @media only screen and (max-width: 500px) {
       /* label[for=html] {font-size:22px;} */
       #hide {display:none;}
