--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" type="image/png" href="favicon-512.png">
   <title>Silver Barter</title>
-  <style>
+  <style> 
+
+    #help {position: absolute; top:5px; left:190px; background-color: transparent; /*border-radius: 4px; margin:0;*/}
+    #help img { margin:0; height: 25px; /*  padding:2px; width:auto; */}
     #vp {display:block; font-size: 12px; color: gray;}
     #container {display: block; max-width: 480px;}
     body {font-size: 24px; font-family: Helvetica;}
@@ -75,12 +78,8 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: #474e5d;
-/*  padding: 10%;
-  background-image: url("Silver Barter QR.png");
-  background-size: 90%;
-  background-repeat: no-repeat; */
 }
-img {width:80%; margin: 10% 10%;}
+img {width: 80%; margin: 10%;}
     @media only screen and (max-width: 500px) {
       /* label[for=html] {font-size:22px;} */
       #hide {display:none;}
@@ -133,6 +132,8 @@ img {width:80%; margin: 10% 10%;}
 <div id="id01" class="modal">
   <img src="Silver Barter QR2.png">
 </div>
+<!--div id="help"><a href="help.html" target="_blank"><img src="help-icon.png"></a></div-->
+<a id="help" href="help.html" target="_blank"><img src="help-icon2.png">
 <script>
 let spot, amt, troy = .715, db = {
     "dolr": {"fract": 1/troy, "count": 0, "price": 0, "total": 0},
