--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
 img {width:393px; border: 1px solid #ccc; border-radius: 8px;}
 a {text-decoration: none;}
 </style><body><div id="container">
-<p>The <b>Silver Barter</b> webapp has two sections to help with bartering for goods and calculating premiums when buying <a target="_blank" href="https://sdbullion.com/blog/junk-silver-faq">junk" silver</a>, gold and bullion.</p>
+<p>The <b>Silver Barter</b> webapp has two sections to help with bartering for goods and calculating premiums when buying <a target="_blank" href="https://sdbullion.com/blog/junk-silver-faq">"junk" silver</a>, gold and bullion.</p>
 <img src="img1.jpg">
 <p>1. Enter gold spot price here.</p>
 <p>2. Enter silver spot price here.</p>
@@ -31,16 +31,27 @@ a {text-decoration: none;}
 <b>BU:</b> Bullion 1-oz rounds & bars, Maples Leafs, American Eagles, etc.<br>
 <b>K:</b> Kilo bars.<br>
 <b>mbox:</b> Monster box (500 oz).</p>
-<p>7. Enter the quoted prices for the selected precious metal.<br>
-The premium will be displayed.</p>
-<p>8. Enter the desired premium percent.<br>
-The price to pay will be displayed.</p>
+<p>7. Enter the quoted prices for the selected precious metal. The premium will be displayed.</p>
+<p>8. Enter the desired premium percent. The price to pay will be displayed.</p>
 <p>9. Toggle premiums for gold instead of silver.</p>
 <p>10. Toggle "Price Prem Pct" table display.</p>
 <p>11. Set silver spot price to $28 per oz.<br>
 <b>Note:</b> Quarters are worth $5 and dimes are worth $2!</p>
 <p>12. The first time you click on this link, it takes you to www.goldapi.io. If you sign-up for a "free" api key and paste it into the Silver Spot Price input box ②, then the next time you click this link it will populate both the gold and silver spot price fields for you. The api key looks like "goldapi-xxxxxxxxxxxxx-io". You get 30 quotes per month.</p>
-<p>13. A link to the "$100 Face-Value 90% Silver Coins" page on the FindBullionPrices.com website. Be careful buying the cheapest bag that it is not full of "Bent / Holed / Damaged / No date" coins.
+<p>13. A link to the "$100 Face-Value 90% Silver Coins" page on the FindBullionPrices.com website. Be careful buying the cheapest bag that it is not full of "Bent / Holed / Damaged / No date" coins.</p>
+<p><b>Example 1:</b> Enter 24.00 into "Spot" (2)<br>
+Toggle off "Silver Rounds" and "Half-Dollars"<br>
+Enter 27.00 into "Amt"<br>
+5 quarters and 3 dimes is worth $26.60 which is as close as you can get to $27 without going over.<br>
+Now hit the nickel button (5&cent;) at the top right. This rounds up the amount by a nickels worth of silver (even though there is no such thing). Now it is 6 quarters and 1 dime.</p>
+<p><b>Example 2:</b> First, make sure you select the "junk" radio button (6).<br>
+Click on the link "Find Bullion Prices" at the top right.<br>
+If you see "SD Bullion" on the list click that.<br>
+Enter the spot price of silver you see at the top of the page on the SD Bullion's website into the "Spot" input field (2). For me that was 23.37.<br>
+Notice the price of a $100 face bag of "junk" silver and enter it into the "Price" input field (7) divided by 100. For "junk" silver you enter the price of $1 face value. In my case the price of a $100 bag of "junk" silver was $1905.94 so I entered 19.06. It then displayed 14.1% in the "Prem" field (8). That's a great price for silver. Rule of thumb is to try to buy your silver for less than 20% premium.<br>
+
+
+
 
 
 
