--- a/index - Copy.html
+++ b/index - Copy.html
@@ -7,7 +7,10 @@
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" type="image/png" href="favicon-512.png">
   <title>Silver Barter</title>
-  <style>
+  <style> 
+
+    #help {position: absolute; top:5px; left:190px; background-color: transparent; /*border-radius: 4px; margin:0;*/}
+    #help img { margin:0; height: 25px; /*  padding:2px; width:auto; */}
     #vp {display:block; font-size: 12px; color: gray;}
     #container {display: block; max-width: 480px;}
     body {font-size: 24px; font-family: Helvetica;}
@@ -63,6 +66,20 @@
     #tbl tr {background-color: transparent;}
   /*#tbl td:nth-child(3) {text-align: left;}*/
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  max-width: 480px;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+}
+img {width: 80%; margin: 10%;}
     @media only screen and (max-width: 500px) {
       /* label[for=html] {font-size:22px;} */
       #hide {display:none;}
@@ -112,6 +129,11 @@
 </table></div>
 <div id="lst"></div>
 <div id="vp"></div>
+<div id="id01" class="modal">
+  <img src="Silver Barter QR2.png">
+</div>
+<!--div id="help"><a href="help.html" target="_blank"><img src="help-icon.png"></a></div-->
+<a id="help" href="help.html" target="_blank"><img src="help-icon2.png">
 <script>
 let spot, amt, troy = .715, db = {
     "dolr": {"fract": 1/troy, "count": 0, "price": 0, "total": 0},
@@ -419,6 +441,18 @@ nick.addEventListener('click', function (event) {
   render();
 });
 document.getElementById("vp").innerHTML = window.innerWidth;
+
+let modal = document.getElementById('id01');
+document.getElementById("qrcode").addEventListener('click', function (event) {
+  modal.style.display='block';
+});
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target.parentNode == modal || event.target == modal) {
+    modal.style.display = "none";
+  }
+}
 /*
   https://stackoverflow.com/questions/114543/how-can-i-horizontally-center-an-element
   https://codepen.io/alexandredees/pen/DbXggK
@@ -426,6 +460,7 @@ document.getElementById("vp").innerHTML = window.innerWidth;
   https://www.ngccoin.com/price-guide/coin-melt-values.aspx
   https://www.cointalk.com/threads/715-or-7234-to-calculate-90.290085/
   https://www.coinflation.com/coins/1932-1964-Silver-Washington-Quarter-Value.html
+  https://me-qr.com/
   Local Barter - 192.168.0.10:9000 - ipconfig /all
 */
 </script>
