--- a/help.html
+++ b/help.html
@@ -39,33 +39,44 @@ span {margin-bottom: 8px; display: block;}
 <span><b>K:</b> Kilo bars.</span>
 <span><b>mbox:</b> Monster box (500 oz).</span></p>
 
-<p>7. Enter the quoted prices for the selected precious metal. The premium (8) will be displayed.</p>
+<p>7. Enter the quoted prices for the selected precious metal. The premium (8) will be displayed, based on the spot price.</p>
 
-<p>8. Enter the desired premium percent. The price (7) to pay will be displayed.</p>
+<p>8. Enter the desired premium percent. The price (7) to pay will be displayed, based on the spot price.</p>
 
-<p>9. Toggle premiums for gold instead of silver.</p>
+<p>9. Toggle premiums for gold instead of silver. The dot fills with gold.</p>
 
 <p>10. Toggle "Price Prem Pct" table display.</p>
 
 <p>11. Sets silver spot price to $28 per oz.<br>
 	<b>Note:</b> Quarters are worth $5 and dimes are worth $2!</p>
 
-<p>12. The first time you click on this link, it takes you to www.goldapi.io. If you sign-up for a "free" api key and paste it into the Silver Spot Price input box ②, then the next time you click this link it will populate both the gold and silver spot price fields for you. The api key looks like "goldapi-xxxxxxxxxxxxx-io". You get 30 quotes per month.</p>
+<p>12. The first time you click on this link, it takes you to www.goldapi.io. If you sign-up for a "free" api key and paste it into the Silver Spot Price input box ②, then the next time you click this link it will populate both the gold and silver spot price fields for you. The api key looks like "goldapi-xxxxxxxxxxxxx-io". You get 100 requests per month.</p>
+
 <p>13. A link to the "$100 Face-Value 90% Silver Coins" page on the FindBullionPrices.com website. Be careful buying the cheapest bag that it is not full of "Bent / Holed / Damaged / No date" coins.</p>
 
 <p><span><b>Example 1:</b> Enter 24.00 into "Spot" (2).</span>
 <span>Toggle off "Silver Rounds" and "Half-Dollars".</span>
 <span>Enter 27.00 into "Amt".</span>
-<span>5 quarters and 3 dimes is worth $26.60 ($1.55 face) which is as close as you can get to $27 without going over. Maybe offer a paper dollar plus the coins.</span>
+<span>5 quarters and 3 dimes is worth $26.60 ($1.55 face) which is as close as you can get to $27 without going over. Maybe offer a paper dollar plus the 8 coins.</span>
 <span>Now hit the nickel button (5&cent;) at the top left. This rounds up the amount by a nickels' worth of silver (even though there is no such thing). Now it is 6 quarters and 1 dime ($1.60 face).</span></p>
 
 <p><span><b>Example 2:</b> First, make sure you select the "junk" radio button (6).</span>
 <span>Click on the link "Find Bullion Prices" at the top right.</span>
 <span>If you see "SD Bullion" on the list click that.</span>
 <span>Enter the spot price of silver you see at the top of the page on the SD Bullion's website into the "Spot" input field (2). For me that was 23.37.</span>
-<span>Notice the price of a $100 face bag of "junk" silver and enter it into the "Price" input field (7) divided by 100. For "junk" silver you enter the price of $1 face value. In my case the price of a $100 bag of "junk" silver was $1905.94 so I entered 19.06. It then displayed 14.1% in the "Prem" field (8). That's a great price for silver. Rule of thumb is to try to buy your silver for less than 20% premium.</span></p>
+<span>Notice the price of a $100 face bag of "junk" silver and enter it into the "Price" input field (7) divided by 100.</span>
+<span>For "junk" silver you enter the price of $1 face value. In my case the price of a $100 bag of "junk" silver was $1905.94 so I entered 19.06. </span>
+<span>It then displays 14.1% in the "Prem" field (8). That's a great price for silver. The "Rule of Thumb" is to try to buy your silver for less than 20% premium.</span></p>
 
-<p><b>Fun Fact:</b>A $1.40 face of "junk" silver is 1 troy oz of silver.</p>
+<p><span><b>Example 3:</b> First, make sure you select the "mbox" radio button (6).</span>
+<span>Go to the SD Bullion website and find a monster box of <a href="https://sdbullion.com/2023-american-silver-eagle-monster-box" target="_blank">American Silver Eagles</a>.</span>
+<span>Enter the spot price of silver you see at the top of the page on the SD Bullion's website into the "Spot" input field (2). For me that was 23.37.</span>
+<span>Notice the price of a monster box of American Silver Eagles and enter it into the "Price" input field (7). For me that was 14678.25</span>
+<span>It then displays 25.6% in the "Prem" field (8). That's a good price for an American Silver Eagle sovereign coin. In April of '23 the premium was more than double that!</span></p>
+
+
+
+<p><b>Fun Fact:</b> A $1.40 face of "junk" silver is 1 troy oz of silver.</p>
 
 
 
