--- a/help.html
+++ b/help.html
@@ -52,7 +52,7 @@ span {margin-bottom: 8px; display: block;}
 
 <p>12. The first time you click on this link, it takes you to www.goldapi.io. If you sign-up for a "free" api key and paste it into the Silver Spot Price input box ②, then the next time you click this link it will populate both the gold and silver spot price fields for you. The api key looks like "goldapi-xxxxxxxxxxxxx-io". You get 100 requests per month.</p>
 
-<p>13. A link to the "$100 Face-Value 90% Silver Coins" page on the FindBullionPrices.com website. Be careful buying the cheapest bag that it is not full of "Bent / Holed / Damaged / No date" coins.</p>
+<p>13. A link to the "$100 Face-Value 90% Silver Coins" page on the "Find&#x200B;Bullion&#x200B;Prices.com" website. Be careful buying the cheapest bag that it is not full of "Bent / Holed / Damaged / No date" coins.</p><!-- U+200B ZERO WIDTH SPACE -->
 
 <p><span><b>Example 1:</b> Enter 24.00 into "Spot" (2).</span>
 <span>Toggle off "Silver Rounds" and "Half-Dollars".</span>
