--- a/help.html
+++ b/help.html
@@ -17,10 +17,10 @@
 		margin-bottom: 200px;
 		font-size: 22px;}
 img {width:393px; border: 1px solid #ccc; border-radius: 8px;}
-a {text-decoration: none;}
+a {text-decoration: none; color: #0096FF;}
 span {margin-bottom: 8px; display: block;}
 </style><body><div id="container">
-<p>The <b>Silver Barter</b> webapp has two sections to help with bartering for goods and calculating premiums when buying <a target="_blank" href="https://sdbullion.com/blog/junk-silver-faq">"junk" silver</a>, gold and bullion.</p>
+<p>The <b>Silver Barter</b> webapp has two sections to help with bartering for goods and calculating premiums when buying <a target="_blank" href="https://sdbullion.com/blog/junk-silver-faq">"junk"</a> silver, gold and bullion.</p>
 <img src="img1.jpg">
 <p>1. Enter gold spot price here.</p>
 
