--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
-<!--   <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" type="image/png" href="favicon-512.png">
- -->  <title>Silver Barter</title>
+  <title>Silver Barter</title>
   <style> 
-
-    #help {position: absolute; top:5px; left:190px; background-color: transparent; /*border-radius: 4px; margin:0;*/}
-    #help img { margin:0; height: 25px; /*  padding:2px; width:auto; */}
+    body {font-size: 24px; font-family: Helvetica;}
+    #help {position: absolute; top:5px; left:190px; background-color: transparent;}
+    #help img { margin:0; height: 20px;}
     #vp {display:block; font-size: 12px; color: gray;}
     #container {display: block; max-width: 480px;}
-    body {font-size: 24px; font-family: Helvetica;}
     .warn {background-color: #e9dbf5;} /* #efe4f7; #E6E6FA;}*/
     #gold,
     input[type="text"] {font-size: 24px; text-align: right;  border-radius: 6px; width: 90px; border-width: thin; padding-right: 8px;}
@@ -55,7 +54,6 @@
     #gold.toggled              {background-color: #FFEA00;}
     #rnd.toggled, #ken.toggled, #prm.toggled {background-color: #F8C8DC;}
     #rnd,         #ken,         #prm         {background-color: #F0F0F0;}
-  /*#rnd.toggled, #ken.toggled               {background-color: #F8C8DC;}*/
     #fbp, #date,  #dollar      {font-size: 12px; text-decoration: none; color:#551A8B;}
     #nick {border-radius:50%; border:1px solid #ddd; padding:5px; margin-right:30px; cursor: default;}
     #nick.toggled {background-color: #F8C8DC;}
@@ -64,22 +62,22 @@
     #tbl th {text-align: center; min-width: 70px;}
     #tbl td {text-align: right; padding: 0 10px;}
     #tbl tr {background-color: transparent;}
-  /*#tbl td:nth-child(3) {text-align: left;}*/
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  max-width: 480px;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: #474e5d;
-}
-img {width: 80%; margin: 10%;}
+    /* The Modal (background) */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      left: 0;
+      top: 0;
+      max-width: 480px;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: #474e5d;
+    }
+    .modal img {width: 80%; margin: 10%;}
+
     @media only screen and (max-width: 500px) {
       #hide {display:none;}
       #premium {width:16px; height:16px;}
