--- a/help.html
+++ b/help.html
@@ -57,7 +57,7 @@ span {margin-bottom: 8px; display: block;}
 <p><span><b>Example 1:</b> Enter 24.00 into "Spot" (2).</span>
 <span>Toggle off "Silver Rounds" and "Half-Dollars".</span>
 <span>Enter 27.00 into "Amt".</span>
-<span>5 quarters and 3 dimes is worth $26.60 ($1.55 face) which is as close as you can get to $27 without going over. Maybe offer a paper dollar plus the 8 coins.</span>
+<span>5 quarters and 3 dimes is worth $26.60 ($1.55 face) which is as close as you can get to $27 without going over. Maybe offer a <a target="_blank" href="https://www.fool.com/terms/f/fiat-currency/">"fiat"</a> US dollar plus the 8 coins.</span>
 <span>Now hit the nickel button (5&cent;) at the top left. This rounds up the amount by a nickels' worth of silver (even though there is no such thing). Now it is 6 quarters and 1 dime ($1.60 face).</span></p>
 
 <p><span><b>Example 2:</b> First, make sure you select the "junk" radio button (6).</span>
