--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
 		font-family: Lora; 
 		src: url("Lora-Regular.ttf");}
 	#container {
-		max-width:735px;
+		max-width:600px;
 		display:inline-block;
 		margin:8px;
 		margin-bottom: 200px;
@@ -20,7 +20,7 @@ img {width:393px; border: 1px solid #ccc; border-radius: 8px;}
 a {text-decoration: none; color: #0096FF;}
 span {margin-bottom: 8px; display: block;}
 </style><body><div id="container">
-<p>The <b>Silver Barter</b> webapp has two sections to help with bartering for goods and calculating premiums when buying <a target="_blank" href="https://sdbullion.com/blog/junk-silver-faq">"junk"</a> silver, gold and bullion.</p>
+<p>The <b>Silver Barter</b> web app has two sections to help with bartering for goods and calculating premiums when buying <a target="_blank" href="https://sdbullion.com/blog/junk-silver-faq">"junk"</a> silver, gold and bullion.</p>
 <img src="img1.jpg">
 <p>1. Enter gold spot price here.</p>
 
@@ -32,7 +32,7 @@ span {margin-bottom: 8px; display: block;}
 
 <p>5. Toggle off "Half-Dollars" if you don't have any.</p>
 
-<p><span>6. Select the Precious Metal that you want to calculate the premium on.</span>
+<p><span>6. Select the type of silver that you want to calculate the premium on.</span>
 <span><b>Junk:</b> Pre-65 half-dollars, quarters and dimes. $1 face value.</span>
 <span><b>Dollar:</b> Morgans and Peace dollars.</span>
 <span><b>BU:</b> Bullion 1-oz rounds & bars, Maples Leafs, American Eagles, etc.</span>
